Bug 1042602 - Symbol behavior changes in ES6 draft rev 26. r=h4writer.