js/src/vm/TypedArrayObject.cpp
@@ -883,7 +883,7 @@ class TypedArrayObjectTemplate : public TypedArrayObject
     static bool
     canConvertInfallibly(const Value &v)
     {
-        return v.isNumber() || v.isBoolean() || v.isNull() || v.isUndefined() || v.isSymbol();
+        return v.isNumber() || v.isBoolean() || v.isNull() || v.isUndefined();
     }
 
     static NativeType
@@ -898,7 +898,7 @@ class TypedArrayObjectTemplate : public TypedArrayObject
         if (v.isNull())
             return NativeType(0);
 
-        MOZ_ASSERT(v.isUndefined() || v.isSymbol());
+        MOZ_ASSERT(v.isUndefined());
         return ArrayTypeIsFloatingPoint() ? NativeType(GenericNaN()) : NativeType(0);
     }
 
@@ -913,7 +913,7 @@ class TypedArrayObjectTemplate : public TypedArrayObject
         }
 
         double d;
-        MOZ_ASSERT(v.isString() || v.isObject());
+        MOZ_ASSERT(v.isString() || v.isObject() || v.isSymbol());
         if (!(v.isString() ? StringToNumber(cx, v.toString(), &d) : ToNumber(cx, v, &d)))
             return false;
 
