js/src/jit-test/tests/symbol/typed-arrays.js
@@ -1,9 +1,4 @@
-var tests = [
-    {T: Uint8Array, result: 0},
-    {T: Uint8ClampedArray, result: 0},
-    {T: Int16Array, result: 0},
-    {T: Float32Array, result: NaN}
-];
+load(libdir + "asserts.js");
 
 var LENGTH = 1024, SYMBOL_INDEX = 999;
 
@@ -11,19 +6,24 @@ var big = [];
 for (var i = 0; i < LENGTH; i++)
     big[i] = (i === SYMBOL_INDEX ? Symbol.for("comet") : i);
 
+var progress;
 function copy(arr, big) {
-    for (var i = 0; i < LENGTH; i++)
+    for (var i = 0; i < LENGTH; i++) {
         arr[i] = big[i];
+        progress = i;
+    }
 }
 
-for (var {T, result} of tests) {
-    // Typed array constructors convert symbols to NaN or 0.
-    arr = new T(big);
-    assertEq(arr[SYMBOL_INDEX], result);
+for (var T of [Uint8Array, Uint8ClampedArray, Int16Array, Float32Array]) {
+    // Typed array constructors convert symbols using ToNumber, which throws.
+    assertThrowsInstanceOf(() => new T(big), TypeError);
 
     // Element assignment does the same.
+    var arr = new T(big.length);
     for (var k = 0; k < 3; k++) {
-        copy(arr, big);
-        assertEq(arr[SYMBOL_INDEX], result);
+        progress = -1;
+        assertThrowsInstanceOf(() => copy(arr, big), TypeError);
+        assertEq(progress, SYMBOL_INDEX - 1);
+        assertEq(arr[SYMBOL_INDEX], 0);
     }
 }
